Fix for alignment in footer

--- a/css/main.css
+++ b/css/main.css
@@ -108,10 +108,10 @@ footer {
 
 .footer_content {
     height: 200px;
+    margin: 0 auto;
 
     text-align: center;
     vertical-align: middle;
-    margin: 0 auto;
 
     color: #FFF;
 
@@ -119,7 +119,5 @@ footer {
 }
 
 .footer_content > a {
-    float: left;
-
     margin: 20px;
 }
